--- a/src/SpectoLogic.Identity.EasyAuth/SpectoLogic.Identity.EasyAuth/SpectoLogic.Identity.EasyAuth.csproj
+++ b/src/SpectoLogic.Identity.EasyAuth/SpectoLogic.Identity.EasyAuth/SpectoLogic.Identity.EasyAuth.csproj
@@ -12,9 +12,9 @@
 	<Copyright>(c) by SpectoLogic e.U.</Copyright>
 	<NeutralLanguage />
 	<PackageLicenseExpression>MIT</PackageLicenseExpression>
-	<Version>1.0.1-alpha</Version>
+	<Version>1.0.2-alpha</Version>
 	<PackageReleaseNotes></PackageReleaseNotes>
-	<RepositoryUrl>https://github.com/SpectoLogic/API-connector-utilties-for-AADB2C</RepositoryUrl>
+	<RepositoryUrl>https://github.com/SpectoLogic/SpectoLogic.Identity.EasyAuth</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
